<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolBar"
                layout="@layout/toolbar_drawer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_24dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/apptvAppTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_10dp"
                        android:text="@string/title_register_user"
                        android:textSize="@dimen/_20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20dp"
                        android:orientation="vertical">

                        <!-- Username -->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilUsername"
                            style="@style/StyledTilAppEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8dp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/appedtUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_username"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_17dp" />
                        </android.support.design.widget.TextInputLayout>

                        <!-- Email -->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilEmail"
                            style="@style/StyledTilAppEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_8dp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/appedtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_17dp" />
                        </android.support.design.widget.TextInputLayout>

                        <!-- Password -->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tnlPassword"
                            style="@style/StyledTilAppEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_8dp"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorTintPassword">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/appedtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_17dp" />
                        </android.support.design.widget.TextInputLayout>

                        <!-- Confirm password -->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tnlConfirmPassword"
                            style="@style/StyledTilAppEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_8dp"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorTintPassword">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/appedtConfirmPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_confirm_password"
                                android:inputType="textPassword"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_17dp" />
                        </android.support.design.widget.TextInputLayout>

                        <!-- Mobile No. -->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tnlMobileNo"
                            style="@style/StyledTilAppEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_8dp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/appedtMobileNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hin_mobile_no"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/colorBlack"
                                android:textSize="@dimen/_17dp" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:layout_marginTop="@dimen/_10dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/appbtnSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorButton"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:padding="@dimen/_5dp"
                            android:text="@string/label_submit"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_17dp" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>