<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/actAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_7dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_17dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/_70dp"
                    android:layout_height="@dimen/_70dp"
                    android:padding="@dimen/_1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo"
                    android:tint="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_3dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/acbCancel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_25dp"
                        android:background="@color/colorWhite"
                        android:padding="@dimen/_3dp"
                        android:text="@string/label_cancel"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_17dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/acbLogout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_25dp"
                        android:background="@color/colorWhite"
                        android:padding="@dimen/_3dp"
                        android:text="@string/label_logout"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_17dp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>